# agentic-mechanical-engineer

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  env-space
.claude/agents/: backend-agent.md  bom-agent.md  cad-agent.md  (+9 more)
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  architecture.py  cad_params.py  requirements.py
backend/app/api/: routes.py
backend/app/bom/: __init__.py  generator.py  sourcing.py
backend/app/cad/: __init__.py  chassis.py  generative.py  runner.py  sandbox.py  stl_fallback.py
backend/app/llm/: __init__.py  agents.py  gates.py  provider.py  telemetry.py
backend/app/reports/: __init__.py  generic_markdown.py  markdown.py
backend/app/schemas/: __init__.py  models.py
backend/app/services/: __init__.py  pipeline.py
backend/app/simulation/: __init__.py  checks.py  geometry_checks.py  physics.py  risk.py
backend/app/storage/: __init__.py  artifacts.py
backend/app/utils/: events.py
backend/tests/: conftest.py  test_api.py  test_architecture_gates.py  test_async_and_provenance.py  test_generative_cad.py  test_golden_path.py  test_llm_fallback.py  test_optimization_loop.py  test_physics_sim.py  test_provider_routing.py  test_schemas.py  test_scope_and_budget.py  test_sourcing_gate.py
context/: README.md
examples/: architecture.json  cad_params.json  requirements.json
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
scripts/: check_env.py  repo_map.py  run_demo.py  update_wiki.py
(+59 files in other folders)
