[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-mechanical-engineer"
version = "0.1.0"
description = "AI mechanical engineering agent: natural-language request -> engineering artifact package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4",
]
sim = [
    "pybullet>=3.2",
    "trimesh>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
